# remofirst-task-1

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: Design.md  Slides.md  SubmissionEmail.md  TimeSpent.md  VideoScript.md
examples/hr_onboarding/: policy.yaml  run_cli.py  sample_transcript.jsonl
examples/hr_onboarding/prompts/: escalation.md  system.md
examples/hr_onboarding/tests/: test_flow.py  test_pii_guard.py
examples/service/: api.py
src/lexguard/: __init__.py  agent.py  audit.py  dsl.py  graph.py  guards.py  llm.py  memory.py  policy.py  runtime.py  tools.py
